--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,40 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="stylesheet" href="scripts/src/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
 
         <!-- Add your site or application content here -->
         <header id="header">
-            <nav id="navigation"></nav>
+          <nav id="navigation" class="navbar">
+            <div class="container">
+              <div class="navbar-header">
+                <a href="" class="navbar-brand">Golf Courses</a>
+              </div>
+
+              <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar navbar-right">
+                  <li>
+                    <a href="">Home</a>
+                  </li>
+                  <li>
+                    <a href="">See more</a>
+                  </li>
+                  <li>
+                    <a href="">Prices</a>
+                  </li>
+                  <li>
+                    <a href="">Sign it</a>
+                  </li>
+                  <li>
+                    <a href="">Concat</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </header>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
