Adicionado Link Bootstrap

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
                     <a href="">Home</a>
                   </li>
                   <li>
-                    <a href="">See more</a>
+                    <a href="">See mais</a>
                   </li>
                   <li>
                     <a href="">Prices</a>
