--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="scripts/src/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="scripts/src/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -26,7 +26,7 @@
                     <a href="">Home</a>
                   </li>
                   <li>
-                    <a href="">See mais</a>
+                    <a href="">See more</a>
                   </li>
                   <li>
                     <a href="">Prices</a>
