--- a/app/index.html
+++ b/app/index.html
@@ -14,14 +14,14 @@
 
         <!-- Add your site or application content here -->
         <header id="header">
-          <nav id="navigation" class="navbar">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
               <div class="navbar-header">
                 <a href="" class="navbar-brand">Golf Courses</a>
               </div>
 
               <div class="collapse navbar-collapse" id="navbar">
-                <ul class="nav navbar navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                   <li>
                     <a href="">Home</a>
                   </li>
