--- a/app/index.html
+++ b/app/index.html
@@ -9,38 +9,42 @@
 
         <link rel="stylesheet" href="scripts/src/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/styles.css">
+
+        <script src="js/vendor/modernizr.js"></script>
+
     </head>
     <body>
 
         <!-- Add your site or application content here -->
         <header id="header">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-              <div class="navbar-header">
-                <a href="" class="navbar-brand">Golf Courses</a>
-              </div>
-
-              <div class="collapse navbar-collapse" id="navbar">
-                <ul class="nav navbar-nav navbar-right">
-                  <li>
-                    <a href="">Home</a>
+          
+          <nav class="navbar navbar-expand-lg  bg-light">
+              <a href="" class="navbar-brand">Golf Courses</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">See more</a>
                   </li>
                   <li>
-                    <a href="">See more</a>
-                  </li>
+                    <a class="nav-link" href="">Prices</a>
+                  <li class="nav-item">
                   <li>
-                    <a href="">Prices</a>
+                    <a class="nav-link" href="">Sign it</a>
                   </li>
-                  <li>
-                    <a href="">Sign it</a>
-                  </li>
-                  <li>
-                    <a href="">Concat</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Concat</a>
                   </li>
                 </ul>
               </div>
-            </div>
           </nav>
+        
         </header>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
